# spot_arm

./: .gitignore
spot_arm_description/: package.xml
spot_arm_description/launch/: controller.launch  controller.yaml  gazebo.launch  joint_controllers.yaml  traj_controller.yaml  tune_controller.launch  tune_controller.yaml  tune_gazebo.launch
spot_arm_description/urdf/: spot_arm.gazebo  spot_arm.trans  spot_arm.xacro
spot_moveit_config/: package.xml
spot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  spot_arm.srdf
spot_moveit_config/docs/: notes.txt
spot_moveit_config/launch/: demo.launch  demo_gazebo.launch  move_group.launch  moveit.rviz
spot_moveit_config/src/: command_robot.py  joint_state_converter.py  joint_state_parser.py  spot_moveit.py
