<?xml version="1.0"?>
<package format="2">
  <name>spot_arm_description</name>
  <version>1.2.4</version>
  <description>The spot_arm_description package</description>
  <author email="niksrid@umich.edu">niksrid</author>
  <maintainer email="niksrid@umich.edu">niksrid</maintainer>
  <license>TODO</license>

  <!-- ros pkgs -->
  <depend>gazebo_ros</depend>
  <depend>ros_control</depend>
  <depend>ros_controllers</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>
  <depend>urdf</depend>
</package>
