<?xml version="1.0"?>
<package format="2">
  <name>spot_moveit_config</name>
  <version>1.2.4</version>
  <description>The spot_moveit_config package</description>
  <author email="niksrid@umich.edu">niksrid</author>
  <maintainer email="niksrid@umich.edu">niksrid</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- user pkgs -->
  <depend>spot_arm_description</depend>

  <!-- python pkgs -->
  <depend>python-numpy</depend>

  <!-- ros / moveit pkgs -->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
</package>
